@@ -1,6 +1,6 @@
 package com.cdz.configuration;
 
-
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -13,28 +13,33 @@ import org.springframework.security.web.authentication.www.BasicAuthenticationFi
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
-
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class SecurityConfig {
 
-    @Bean
-    public SecurityFilterChain SecurityFilterChain(
-            HttpSecurity http)
-            throws Exception {
+    @Value("${cors.allowed-origins:http://localhost:5173,http://localhost:3000}")
+    private String allowedOrigins;
 
-        return http.sessionManagement(manegement ->
-                        manegement.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(Authorize -> Authorize
+    @Value("${jwt.secret}")
+    private String jwtSecret;
+
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+
+        return http.sessionManagement(management -> management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(authorize -> authorize
                         .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-ui.html").permitAll()
                         .requestMatchers("/auth/**").permitAll()
+                        .requestMatchers("/actuator/**").permitAll()
+                        .requestMatchers("/api/billing/webhook").permitAll()
                         .requestMatchers("/api/**").authenticated()
-                        .anyRequest().permitAll()).addFilterBefore(new JwtValidator(), BasicAuthenticationFilter.class
-                ).csrf(AbstractHttpConfigurer::disable)
-                .cors(
-                        cors -> cors.configurationSource(corsConfigurationSource())
-                ).build();
+                        .anyRequest().permitAll())
+                .addFilterBefore(new JwtValidator(jwtSecret), BasicAuthenticationFilter.class)
+                .csrf(AbstractHttpConfigurer::disable)
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .build();
     }
 
     @Bean
@@ -45,10 +50,11 @@ public class SecurityConfig {
     private CorsConfigurationSource corsConfigurationSource() {
         return request -> {
             CorsConfiguration cfg = new CorsConfiguration();
-            cfg.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000"));
-            cfg.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-            cfg.setAllowedHeaders(List.of("*"));
-            cfg.setExposedHeaders(List.of("Authorization"));
+            cfg.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:3000"));
+            cfg.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+            cfg.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin",
+                    "Access-Control-Request-Method", "Access-Control-Request-Headers"));
+            cfg.setExposedHeaders(Arrays.asList("Authorization"));
             cfg.setAllowCredentials(true);
             cfg.setMaxAge(3600L);
             return cfg;
